Fix location id for current limit violation (#181)
Co-authored-by: Slimane AMAR <slimane.amar_externe@rte-france.com>